--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ h4{
     margin: 0 !important;
     grid-row: auto !important;
 }
+
+.agendaPage{
+    background-image: url("./assets/images/2321000101_95294d2102_k.jpg") !important;
+    background-size: cover !important;
+    background-position: center !important;
+}
 .agendaList p{
     font-family: "Quicksand", sans-serif !important;
     font-size: 2rem !important;
@@ -36,7 +42,6 @@ h4{
     background-image: url('./assets/images/2321000101_95294d2102_k.jpg') !important;
     background-size: cover !important;
     background-position: center !important;
-    transform: translate(0,0) !important;
 }
 .r-frame{
     color: rgb(255, 255, 255) !important;
@@ -45,7 +50,28 @@ h4{
     border-radius: 20px;
 }
 
-.agendaPage .r-frame{
-    border-color: rgba(0, 0, 0, 0) !important;
-    background-color: transparent !important;
+.backgroundInfo{
+    font-size: 1.5rem !important;
+    max-width: fit-content !important; 
 }
+
+.backgroundInfo li{
+    font-size: 1.3rem !important;
+    margin-bottom: 1rem !important;
+}
+
+.backgroundContent{
+    display: grid !important;
+    grid-template-columns: auto auto !important;
+    gap: 2rem !important;
+}
+
+.backgroundContent img{
+    max-width: 28rem !important;
+}
+
+.backgroundContent label{
+    font-size: 1.2rem !important;
+    font-style: italic !important;
+}
+
