--- a/style.css
+++ b/style.css
@@ -20,12 +20,13 @@ h4{
 .agendaList{
     display: grid !important;
     grid-template-columns: auto auto !important;
-    gap: .5rem !important;
-    row-gap: .5rem !important;
+    gap: .1rem !important;
     list-style: none !important;
     padding: 0 !important;
     margin: 0 !important;
     grid-row: auto !important;
+    height: fit-content !important;
+    align-items: center !important;
 }
 
 .agendaPage{
@@ -60,35 +61,21 @@ h4{
     margin-bottom: 1rem !important;
 }
 
-.backgroundContent{
-    display: grid !important;
-    grid-template-columns: auto auto !important;
-    gap: 2rem !important;
-}
-
-.backgroundContent img{
+.container img{
     max-width: 28rem !important;
 }
 
-.backgroundContent label{
+.container label{
     font-size: 1.2rem !important;
     font-style: italic !important;
 }
 
-.currentIssuesPage .currentIssueContent{
+.container{
     display: grid !important;
     grid-template-columns: auto auto !important;
     gap: 2rem !important;
 }
-
-.currentIssueContent img{
-    max-width: 15rem !important;
-}
-.currentIssueContent label{
-    font-size: 1.2rem !important;
-    font-style: italic !important;
-}
-.currentIssueContent li{
+.container ul{
     font-size: 1.3rem !important;
     margin-bottom: 1rem !important;
 }
