--- a/style.css
+++ b/style.css
@@ -78,6 +78,8 @@ h4{
     display: grid !important;
     grid-template-columns: auto auto !important;
     gap: 2rem !important;
+    align-items: center !important;
+    justify-content: center !important;
 }
 .container ul{
     font-size: 1.3rem !important;
@@ -106,4 +108,27 @@ h4{
 }
 .progress span{
     background-color: rgb(0, 119, 255) !important;
+}
+
+#backgroundImage {
+    max-height: 15rem !important;
+}
+
+#riskFactorsImage{
+    max-height: 20rem !important;
+}
+
+.overviewImage{
+    margin-top: -3rem !important;
+}
+
+i{
+    font-style: italic !important;
+}
+
+.worksCitedList{
+    list-style: none !important;
+    padding-left: 3rem !important;
+    text-indent: -3rem !important;
+    max-width: 50rem !important;
 }
