--- a/style.css
+++ b/style.css
@@ -38,11 +38,22 @@ h4{
     background-size: cover !important;
     background-position: center !important;
 }
-.agendaList p{
+.agendaContent li{
+    list-style-type: number !important;
     font-family: "Quicksand", sans-serif !important;
     font-size: 2rem !important;
+    margin-bottom: 2rem !important;
+    max-width: 25rem !important;
+    margin-left: 2.5rem !important;
 }
 
+.agendaContent{
+    font-size: 2rem !important;
+    display: grid !important;
+    grid-template-columns: auto auto !important;
+    gap: 2rem !important;
+    align-items: center !important;
+}
 .titlePage{
     background-image: url('./assets/images/2321000101_95294d2102_k.jpg') !important;
     background-size: cover !important;
